prometheus/04-prometheus/04-prometheus-headlessService.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-svc
  namespace: kube-prom
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/scheme: "http"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "9090"
spec:
  clusterIP: "None"
  selector:
    app: prometheus
  ports:
  - name: http
    port: 9090
    targetPort: 9090
