prometheus/04-prometheus/06-prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: kube-prom
spec:
  ingressClassName: "nginx"
  rules:
  - host: "k8s-prom.oldxu.net"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-svc
            port:
              number: 9090
